src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AIT_Distributor_Financial_Status__c</fullName>
        <formula>IF(Primary_Distributor_AIT__c != null, IF(Primary_Distributor_AIT__r.Financial_Customer_Flag__c, &apos;true&apos;, &apos;false&apos;),null)</formula>
        <label>AIT Distributor Financial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIT_Reseller_Financial_Status__c</fullName>
        <formula>IF(Primary_Channel_Partner_AIT__c != null, IF(Primary_Channel_Partner_AIT__r.Financial_Customer_Flag__c, &apos;true&apos;, &apos;false&apos;),null)</formula>
        <label>AIT Reseller Financial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIT_Sales_Stage_Order_LA__c</fullName>
        <formula>CASE( StageName ,&apos;Identify&apos;,10,&apos;Qualify&apos;, 30,&apos;Validate&apos;,50,&apos;Secure&apos;,80,&apos;Closed - Won&apos;,100,&apos;Closed - Lost&apos;,0,&apos;Closed - Duplicate&apos;,0,&apos;Forecast&apos;, 100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage Order LA AIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Single__c</fullName>
        <label>Alliance Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM/Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM/Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner__c</fullName>
        <label>Alliance Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Alliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Amount_Converted_SRDR__c</fullName>
        <formula>Mid(Amount_Copy__c, 1, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount_Converted_SRDR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Copy__c</fullName>
        <formula>Text(Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount_Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <formula>IF( ISPICKVAL(CurrencyIsoCode,&apos;USD&apos;), Amount, IF( ISNULL(FX_Rate__c),null,Amount/FX_Rate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Annual Revenue</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>Access Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset and Facility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management Tracking &amp; Movement (owned by the company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Devices and Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Tracking and Intelligence: Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Bank Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Milk Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Scanning &amp; Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Scanning and Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Services Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Enforcement and Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect Teacher and  Campus Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing &amp; Gift Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing Loyalty and Membership Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietary and Allergens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document &amp; Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document and Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Citation, Incidents Reports and Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_Date_to_Distributor__c</fullName>
        <inlineHelpText>This field is applicable only for LATAM region.</inlineHelpText>
        <label>Book Date to Distributor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Budget Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Value__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Budget Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <description>This field is created as per the CR raised on July 2nd 2015</description>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAG_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>needs to be checked when the opportunity will use custom hardware or software in which the custom application team needs to be aware</description>
        <inlineHelpText>check this box for a custom hw/sw applicaiton</inlineHelpText>
        <label>CAG Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMP_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for CMP leads</inlineHelpText>
        <label>CMP Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>New Customer New App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer New App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing App New Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taking Share from Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh of Installed Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion of Installed Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Adjustments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheat_Sheet_Guidance_Book__c</fullName>
        <formula>IF(ISPICKVAL(StageName,&apos;Identify&apos;), &apos;015i0000006jaL5&apos;, 
IF(ISPICKVAL(StageName,&apos;Qualify&apos;), &apos;015i0000006jaL6&apos;, 
IF(ISPICKVAL(StageName,&apos;Validate&apos;), &apos;015i0000006jaL7&apos;,
IF(ISPICKVAL(StageName,&apos;Secure&apos;), &apos;015i0000006jaL8&apos;, 
IF(ISPICKVAL(StageName,&apos;Closed - Won&apos;), &apos;015i0000006jaL9&apos;, 
IF(ISPICKVAL(StageName,&apos;Closed - Lost&apos;), &apos;015i0000006jaLA&apos;, 
IF(ISPICKVAL(StageName,&apos;Closed - Duplicate&apos;), &apos;015i0000006jaLB&apos;,&apos;&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheat Sheet/Guidance Book</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clone Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloned_from__c</fullName>
        <description>This field helps to identify from which Opportunity it is cloned</description>
        <label>Cloned from</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>Datamax-Oneil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printronix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fargo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datamax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datasouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dymo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Godex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repacore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Part__c</fullName>
        <label>Competitor Part #&apos;s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>2WIRE - PACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accu-Sort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerohive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeroscout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alien Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alinco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alvarion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-POS Co.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artevea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery Dennison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviat Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarepoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beifeng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing Rongda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing SPRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGRAVIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELKIN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Conviction_Level_With_OS_Direction__c</fullName>
        <label>Conviction Level With OS Direction</label>
        <picklist>
            <controllingField>Preferred_Handheld_Operating_System__c</controllingField>
            <picklistValues>
                <fullName>0-49%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%-99%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Date_Fiscal_Month__c</fullName>
        <formula>CASE(MONTH(   DATEVALUE( CreatedDate ) ), 
1, &quot;Jan&quot; , 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10,&quot;Oct&quot;, 
11,&quot;Nov&quot;, 
12,&quot;Dec&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Fiscal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Fiscal_Quater__c</fullName>
        <formula>CASE(MONTH(  DATEVALUE(CreatedDate) ), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Fiscal Quater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Fiscal_Year__c</fullName>
        <formula>Text(Year(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(Account.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Reseller__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Current Reseller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_IR_Interface_Status__c</fullName>
        <label>DR IR Interface Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Timeframe__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Decision Making Timeframe</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Pool__c</fullName>
        <description>This is look up to demo pool.</description>
        <label>Demo Pool</label>
        <referenceTo>DD_Demo_Pool__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when a demo is requested</description>
        <label>Demo Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Account_Currency__c</fullName>
        <label>Account Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Distributor__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Distributor as Financial Customer</description>
        <label>Direct Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_End_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>End User as Financial Customer</description>
        <label>Direct End User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reseller as Financial Customer</description>
        <label>Direct Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Financial_Status__c</fullName>
        <formula>IF(Opportunity_Distributor__c != null, IF(Opportunity_Distributor__r.Financial_Customer_Flag__c, &apos;true&apos;, &apos;false&apos;),null)</formula>
        <label>Distributor Financial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Type__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( Opportunity_Distributor__c )), 
NOT(ISBLANK(Primary_Distributor_AIT__c ))) , Opportunity_Distributor__r.Name+&apos; , &apos;+ Primary_Distributor_AIT__r.Name , 
IF(AND(NOT(ISBLANK( Opportunity_Distributor__c)), 
(ISBLANK(Primary_Distributor_AIT__c ))) , Opportunity_Distributor__r.Name , 
IF(AND((ISBLANK( Opportunity_Distributor__c)), 
NOT(ISBLANK(Primary_Distributor_AIT__c))) , Primary_Distributor_AIT__r.Name,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <picklist>
            <picklistValues>
                <fullName>BlueStar Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingram Micro Data Capture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scansource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wynit Distribution, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingram Micro Data Capture Pos Div.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EVM_Opportunity_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>It is used as a Place holder for Opportunity ID of MSI SFDC created from DR/IR .</description>
        <externalId>true</externalId>
        <label>EVM Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label># Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Financial_Status__c</fullName>
        <formula>IF(AccountId != null, IF(Account.Financial_Customer_Flag__c, &apos;true&apos;, &apos;false&apos;),null)</formula>
        <label>End User Financial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Price__c</fullName>
        <label>End User Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <description>name of end user for this opportunity</description>
        <label>End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Pricing Error Text</label>
        <length>32700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <description>Copies value from Lead on convertion</description>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FX_Rate__c</fullName>
        <label>FX Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Ship_Fiscal_Period__c</fullName>
        <formula>CASE(MONTH(CloseDate),
1, &quot;Jan&quot; ,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10,&quot;Oct&quot;,
11,&quot;Nov&quot;,
12,&quot;Dec&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Ship Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Ship_Fiscal_Quarter__c</fullName>
        <formula>TEXT ( YEAR( CloseDate)) &amp; &quot; &quot; &amp; CASE(MONTH(CloseDate), 
1, &quot;Q1&quot; , 
2, &quot;Q1&quot;, 
3, &quot;Q1&quot;, 
4, &quot;Q2&quot;, 
5, &quot;Q2&quot;, 
6, &quot;Q2&quot;, 
7, &quot;Q3&quot;, 
8, &quot;Q3&quot;, 
9, &quot;Q3&quot;, 
10, &quot;Q4&quot;, 
11, &quot;Q4&quot;, 
12, &quot;Q4&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Ship Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Ship_Fiscal_Year__c</fullName>
        <formula>Text (Year( CloseDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Ship Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Notes__c</fullName>
        <label>Forecast Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecast_Stage__c</fullName>
        <description>This field is created to suppor the Oppty Forecast</description>
        <label>Forecast Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Identify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Adjustments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FX Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mgt Adjustments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate/Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Type__c</fullName>
        <label>Fulfillment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct to Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Sales Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Sales In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Sales Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GSA_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSA Flag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>